--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,13 @@
     background-color: #F3F2EF;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .app__body{
     display: flex;
+    margin-top: 35px;
+    max-width: 1200px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
