--- a/src/components/Feed/styles.css
+++ b/src/components/Feed/styles.css
@@ -1,12 +1,12 @@
 .feed {
-    flex: 0.6;
+    flex: 0.5;
     margin: 0 20px;
 }
 
 .feed__inputContainer {
     background-color: white;
     padding: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     border-radius: 10px;
     margin-bottom: 20px;
 }
@@ -37,7 +37,7 @@
     display: none;
   }
 
-  .feed__inputOptions{
-      display: flex;
-      justify-content: space-evenly;
-  }
+.feed__inputOptions{
+    display: flex;
+    justify-content: space-between;
+}
