--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -2,16 +2,18 @@
     position: sticky;
     top: 0;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     background-color: #FFF;
     border-bottom: 0.1px solid lightgray;
-    padding: 12px 0px;
+    padding: 4px 0px;
     width: 100%;
-    z-index: 9999;
+    z-index: 100;
 }
 
 .header__left{
     display: flex;
+    padding-left: 7.5%;
+    align-items: center;
 }
 
 .header__search{
@@ -19,17 +21,25 @@
     padding: 10px;
     align-items: center;
     border-radius: 5px;
-    height: 22px;
+    height: 16px;
+    width: 250px;
     color: gray;
     background-color: #EEF3F8;
 }
 
+.header__search > input{
+   outline:none;
+   border: none;
+   background: none;
+}
+
 .header__left > img {
     object-fit: contain;
-    height: 40px;
+    height: 35px;
     margin-right: 10px;
 }
 
 .header__right{
     display: flex;
+    padding-right: 7%;
 }
