--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,8 +1,9 @@
 .container_hero{
     width: 100%;
-    height: 100vh;
+    height: 95vh;
     background-color: #FFF;
     display: flex;
+    padding-top: 40px;
 }
 
 .hero_left{
@@ -10,27 +11,32 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    padding-left: 7.5rem;
 }
 
 .hero_left > p {
-   font-size: 48px;
+    font-weight: 200;
+    font-size: 56px;
+    color: rgba(143, 88, 73, 1);
 }
 
 .hero_option{
     width: 400px;
     display: flex;
     flex-direction: column;
-    gap:1rem;
+    gap: 1rem;
 }
 
 .option{
     height: 55px;
     width: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    color: rgb(48, 47, 47);
     font-size: 20px;
     background-color: #FFF;
-    padding-left: 10px;
+    padding: 15px;
     border-radius: 10px;
     cursor: pointer;
     border: 1px solid rgb(228, 225, 225);
@@ -42,5 +48,8 @@
 
 .hero_right{
     flex: 0.5;
-    background-color: cyan;
+}
+
+.hero_right > img{
+    width: 100%;
 }
