--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,41 +1,62 @@
 .container_footer{
-    display: flex;
+    height: auto;
     width: 100%;
-    height: 70vh;
-    background-color: #faf9f9;
+    display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #F3F2EF;
 }
 
-.area_footer {
+
+.wrapper_list{
     width: 82%;
     display: flex;
+    flex-wrap: wrap;
 }
 
-.area_footer > img {
-    height: 24px;
-}
 
-.list_area{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 3rem;
-    padding-left: 10rem;
-}
-
-.list {
+.list_item_footer{
     display: flex;
-    flex-direction: column;
-    gap: 0.4rem;
+    color: rgb(0, 0, 0, 0.6);
+    line-height: 1.3;
+    font-size: 12px;
+    font-weight: 600;
+    justify-content: center;
+    padding: 8px;
+    position: relative;
+    transition: 0.3s all ease;
+    cursor: pointer;
 }
 
-.list > h3 {
-    color: rgba(0, 0, 0, 0.9);
-    font-size: 16px;
-    font-weight: 600;  
+.list_item_footer:hover{
+    color: #0a66c2;
+    text-decoration: 1px underline;
+    transition: 0.3s all ease;
 }
-.list_item{
-    color: rgba(0, 0, 0, 0.6);
-    font-size: 14px;
-    font-weight: 500;  
+
+.list_item_footer > img {
+    height: 14px;
 }
+
+
+.list_item_footer > span{
+    padding-left: 7px;
+    font-weight: 100;
+}
+
+@media(max-width: 1161px){
+    .wrapper_list{
+       width: 95%;
+    } 
+}
+@media (max-width: 769px){
+    .wrapper_list{
+        padding: 20px;
+    }  
+    .list_item_footer{
+        width: 50%;
+        justify-content: flex-start;
+    }
+}
+
+
