--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -24,7 +24,7 @@
     gap: 1rem;
 }
 
-.nav_home_right > h3 {
+.h3 {
     color: gray;
     font-size: 16px;
     font-weight: 500;
@@ -32,15 +32,16 @@
     border-radius: 5px;
     padding: 8px 10px;
     transition: 0.3s ease;
+    text-decoration: none;
 }
 
-.nav_home_right > h3:hover {
+.h3:hover {
    background-color: rgb(238, 236, 236);
    color: black;
    transition: 0.3s ease;
 }
 
-.nav_home_right > span {
+.span {
     color: #0a66c2;
     font-size: 16px;
     font-weight: 500;
@@ -48,19 +49,21 @@
     border: 1px solid #0a66c2;
     border-radius: 30px;
     cursor: pointer;
+    text-decoration: none;
 }
 
-.nav_home_right > span:hover {
+.span:hover {
     background-color: #c1f3ff;
 }
 
 .container_announce{
     display: flex;
     width: 100%;
-    height: 40vh;
+    height: auto;
     background-color: #f1eae1;
     justify-content: center;
     align-items: center;
+    padding: 40px 0px;
 }
 
 .area_announce {
@@ -69,7 +72,8 @@
     display: flex;
     align-items: center;
 }
-.area_announce > p {
+
+.title_announce{
     width: 413px;
     font-size: 40px;
     font-weight: 400;
@@ -96,3 +100,36 @@
     transition: 0.3s all ease;
 }
 
+@media(max-width: 1161px){
+    .area_announce{
+       width: 95%;
+    } 
+    .nav_home{
+        width: 95%;
+    }
+    .nav_home > img{
+        height: 22px;
+    }
+    .span {
+        padding: 6px 20px;
+    }
+}
+
+@media (max-width: 769px){
+    .area_announce{
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 18px;
+    }
+    .title_announce{
+        width:100%;
+        font-size: 32px;
+        font-weight: 500;
+        line-height: 2.5rem;
+    }
+    .area_announce > button {
+        width: 200px;
+        height: 45px;
+        margin-top: 20px;
+    }
+}
