--- a/src/components/Suggestion/styles.css
+++ b/src/components/Suggestion/styles.css
@@ -1,29 +1,31 @@
-.container_susggetion{
+.container_suggetion{
     width: 100%;
-    height: 70vh;
+    height: auto;
     background-color: #faf9f9;
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 60px 0px;
 }
 
 .info_area{
-    display: flex;
     width: 82%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .info_area > p{ 
-    width: 62vw;
+    width: 700px;
     font-size: 48px;
     font-weight: 200;
     color: rgb(48, 47, 47);
+    margin-right: 50px;
 }
 
 .suggestion_area{
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    padding-left: 50px;
     gap: 1rem;
 }
 
@@ -53,4 +55,24 @@
     background-color: rgb(207, 205, 205);
     text-decoration: 2px underline;
     transition: 0.3s all ease;
+}
+@media(max-width: 1161px){  
+    .info_area{
+        width: 95%;
+        flex-direction: column;
+        gap:1rem;
+    }
+    .info_area > p{ 
+        width: 100%;
+    }
+}
+
+@media (max-width: 769px){
+    .info_area > p{ 
+        font-size: 32px;
+        font-weight: 400;
+    }
+    .suggestion_button {
+        padding: 12px 20px;
+    }
 }
