--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,17 +1,22 @@
 .container_hero{
     width: 100%;
-    height: 95vh;
+    height: auto;
     background-color: #FFF;
     display: flex;
-    padding-top: 40px;
+}
+.area_hero{
+    width: 100%;
+    display: flex;
+    padding-left: 7.5rem;
 }
 
 .hero_left{
-    flex: 0.5;
+    flex: 1;
+    width: 55vw;
     display: flex;
     flex-direction: column;
+    padding-right: 42px;
     gap: 2rem;
-    padding-left: 7.5rem;
 }
 
 .hero_left > p {
@@ -46,10 +51,47 @@
     box-shadow: 5px 5px 7px rgb(228, 225, 225);
 }
 
-.hero_right{
-    flex: 0.5;
+.area_img_hero{
+    width: 43%;
+    display: flex;
+    overflow: hidden;
+}
+.area_img_hero > img{
+    width: 600px;
+    height: 560px;
 }
 
-.hero_right > img{
-    width: 100%;
+@media(max-width: 1161px){
+    .area_hero{
+        padding-left: 1.8rem;
+    } 
+}
+
+@media (max-width: 769px){
+    .area_img_hero{
+        overflow: inherit;
+        justify-content: center;
+    }
+    .area_hero{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 16px;
+    }
+    .hero_left{
+        width: 100%;
+        padding: 0;
+        padding-bottom: 20px;
+    }
+    .hero_left > p {
+        font-weight: 300;
+        font-size: 32px;
+    }
+    .area_img_hero > img{
+        width: 344px;
+        height: 200px;
+    }
+    .hero_option{
+        width: 100%;
+    }
 }
