--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -32,3 +32,10 @@
     width: 98%;
     justify-content: space-between;
 }
+
+@media(max-width:579px){
+    .post{
+        border-radius: 0;
+    }
+
+}
