--- a/src/components/Widgets/styles.css
+++ b/src/components/Widgets/styles.css
@@ -1,12 +1,12 @@
 .widgets {
     position: sticky;
-    top: 80px;
     flex: 0.3;
     background-color: white;
     border-radius: 10px;
     border: 1px solid lightgray;
     height: fit-content;
     padding-bottom: 10px;
+    display: block;
 }
 
 .widgets__header {
@@ -51,4 +51,11 @@
 .widgets__articleRight > p {
     font-size: 12px;
     color: gray;
+}
+
+
+@media(max-width: 992px){
+    .widgets{
+        display: none;
+    }
 }
