--- a/src/components/Slider/styles.css
+++ b/src/components/Slider/styles.css
@@ -5,6 +5,7 @@
     background-color: rgb(250, 249, 249);
     justify-content: center;
     align-items: center;
+    padding: 40px 0;
 }
 
 .area_slide{
@@ -21,7 +22,7 @@
 }
 
 .nav {
-    width: 100px;
+    width: 90px;
     display: flex;
     color: rgba(0,0,0,0.6);
     cursor: pointer;
@@ -33,14 +34,10 @@
 }
 
 .wrapper_slide {
+    width: 100%;
     height: 70%;
     display: flex;
     justify-content: space-between;
-}
-
-.slide{
-    width: 100vw;
-    display: flex;
     align-items: center;
 }
 
@@ -55,7 +52,7 @@
 
 .info_container{
     flex: 1;
-    padding-right: 50px;
+    padding-right: 20px;
 }
 
 .info_container > h3{
@@ -78,8 +75,32 @@
     .area_slide{
         width: 95%;
     }
+      .info_container{
+        padding: 0;
+    }  
+    .image_container > img {
+        padding-top: 10px;
+        height: 390px;
+    }
 }
 
 @media (max-width: 769px){
+    .area_slide{
+        width: 90%;
+    }
+    .wrapper_slide{
+        flex-direction: column;
+    } 
+    .info_container > h3{
+        font-size: 30px;
+    }
     
+    .info_container > p{
+        font-size: 24px;
+        font-weight: 100;   
+    }
+    .image_container > img {
+        padding-top: 10px;
+        height: 275px;
+    }
 }
