--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -116,6 +116,19 @@
 }
 
 @media (max-width: 769px){
+    .nav_home > img{
+        height: 20px;
+    }
+    .nav_home_right{
+        gap: 0.3rem;
+    }
+    .h3 {
+        font-size: 14px;
+        padding: 4px 8px;
+    }
+    .span {
+        padding: 5px 14px;
+    }
     .area_announce{
         flex-direction: column;
         align-items: flex-start;
