--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -1,12 +1,11 @@
 .container_register{
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .section_register{
-    width: 100%;
     height: 100vh;
     min-height: 78vh;
     background-color: #F3F2EF;
@@ -28,22 +27,24 @@
 .container__input{
     width: 400px;
     height: 450px;
-    background-color: #FFF;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    background-color: #FFF;
+    padding: 0 15px;
 }
 
 .container__input > form {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .container__input > form > input {
-    width: 350px;
+    width: 100%;
     height: 30px;
     margin-bottom: 10px;
     border-radius: 5px;
@@ -75,7 +76,7 @@
 }
 
 .container__input > button {
-    width: 350px;   
+    width: 100%;   
     height: 48px;
     font-size: 16px;
     font-weight: 550;
@@ -100,31 +101,20 @@
     color: #0a66c2;
     font-weight: 600;
     cursor: pointer;
+    text-decoration: none;
+}
+.login__resgiter:hover {
+    text-decoration: underline;
 }
 
 
-@media(max-width: 1161px){
+@media(max-width: 769px){
     .section_register{
         background-color: #FFF;
         height: auto;
     }   
     .container__input{
-        width: 600px;
-        height: 350px;
+        width: 90%;
+        justify-content: flex-start;
     }
-    .container__input > form > input,  
-    .container__input > button  {
-        width: 568px;
-    }
-}
-
-@media(max-width: 615px){ 
-    .container__input{
-        width: 300px;
-        height: 380px;
-    }
-    .container__input > form > input,  
-    .container__input > button  {
-        width: 300px;
-    }
-}
+} 
