--- a/src/components/HeaderOptions/styles.css
+++ b/src/components/HeaderOptions/styles.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
-    margin-right: 30px;
+    margin: 0 10px;
     color: gray;
     cursor: pointer;
 }
